Completada la página de perfil y otros arreglos

--- a/product-info.html
+++ b/product-info.html
@@ -62,7 +62,7 @@
 
   <main role="main" class="pb-5">
     <!--Here is the info of the product-->
-    <div class="container px-5 py-4 mt-3 border rounded shadow">
+    <div class="container px-md-5 py-4 mt-3 border rounded shadow">
       <div class="row p-3" id="productInfo"></div>
 
       <div class="border-bottom my-3"></div>
