--- a/cart.html
+++ b/cart.html
@@ -29,7 +29,7 @@
   </script>
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
   <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #6d0757;">
     <div class="navbar-brand ml-2" href="#">
       <img src="img/brand 1.png" height="42" class="mx-1">
@@ -413,6 +413,7 @@
 
   </div>
 
+  <div class="wrapper flex-grow-1"></div>
   <footer class="text-muted bg-light">
     <div class="container">
       <p class="float-right">
