--- a/cover.html
+++ b/cover.html
@@ -62,7 +62,7 @@
   </nav>
   
   <main role="main">
-    <section class="jumbotron text-center">
+    <section class="jumbotron text-center d-none d-lg-block">
       <div class="m-5">
         <h1></h1>
       </div>
