--- a/my-profile.html
+++ b/my-profile.html
@@ -82,14 +82,16 @@
       </ul>
     </div>
   </nav>
-  <div class="container px-0 px-lg-5 py-0 py-lg-4">
+  <div id="divProfile" class="container px-0 px-lg-5 py-0 py-lg-4">
     <h3 class="text-center font-weight-bold p-4">Mi perfil</h3>
-    <div class="form-group py-4 mx-auto mb-5 px-0 px-lg-5 border rounded shadow-sm" style="max-width: 600px;">
+    <div class="form-group py-4 mx-auto mb-5 px-0 px-lg-5 border rounded shadow" style="max-width: 600px;">
       <div class="col">
         <div class="form-group">
           <div class="row py-3 px-4 justify-content-center">
-            <div class="col-8 col-lg-5">
-              <img src="img/defaultProfileImage.png" id="profileImage" alt="imgPerfil" class="w-100">
+            <div class="col-8 col-lg-5 profile-img-container rounded bg-light">
+              <div class="row h-100 align-items-center justify-content-center">
+                <img src="img/defaultProfileImage.png" id="profileImage" alt="imgPerfil" class="profile-img">
+              </div>
             </div>
             <div class="w-100"></div>
             <div class="col-12 col-lg-8">
@@ -114,7 +116,7 @@
               <label for="profileAge">Edad: </label>
             </div>
             <div class="col">
-              <input type="number" name="profileAge" id="profileAge" class="form-control">
+              <input type="number" min="1" max="150" name="profileAge" id="profileAge" class="form-control">
             </div>
           </div>
           <div class="row py-3 px-4 align-items-end">
@@ -130,22 +132,23 @@
               <label for="profilePhone">Teléfono: </label>
             </div>
             <div class="col">
-              <input type="number" name="profilePhone" id="profilePhone" class="form-control">
+              <input type="number" min="0" name="profilePhone" id="profilePhone" class="form-control">
             </div>
           </div>
         </div>
         <hr>
-        <div class="row  py-3 px-4 justify-content-end">
-          <div class="col-12 col-lg">
-            <button class="btn btn-block btn-secondary" onclick="deleteProfile()">Eliminar cambios</button>
+        <div class="row py-3 px-4 justify-content-end">
+          <div class="col py-2 py-md-0">
+            <button class="btn btn-block btn-secondary" onclick="deleteProfile()">Eliminar datos</button>
           </div>
-          <div class="col-12 col-lg">
+          <div class="col py-2 py-md-0">
             <button class="btn btn-block btn-primary" onclick="saveProfile()">Guardar cambios</button>
           </div>
         </div>
       </div>
     </div>
   </div>
+  
   <div class="wrapper flex-grow-1"></div>
   <footer class="text-muted bg-light">
     <div class="container">
@@ -153,15 +156,6 @@
       <p>Clickea <a target="_blank" href="Letra.pdf">aquí</a> para descargar la letra del obligatorio.</p>
     </div>
   </footer>
-  <!--
-
-    <div class="alert fade alert-success" role="alert" id="alertResult">
-      <span id="resultSpan"></span>
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-  -->
   <div id="spinner-wrapper">
     <div class="lds-ring">
       <div></div>
