--- a/products.html
+++ b/products.html
@@ -83,11 +83,13 @@
         </div>
       </div>
       <div class="row justify-content-center">
-        <input type="search" placeholder="Buscar..." id="searchProductBar" class="form-control col-10 col-md-6 my-2">
-        <div class="col-md-6 col-sm-12 my-md-2">
+        <div class="col-11 col-md-5 my-2">
+          <input type="search" placeholder="Buscar..." id="searchProductBar" class="form-control">
+        </div>
+        <div class="d-none d-md-inline col my-md-2">
           <div class="row">
-            <div class="col">
-              <p class="font-weight-normal text-right my-2">Precio</p>
+            <div class="col px-0">
+              <p class="font-weight-normal text-right my-2">Precio:</p>
             </div>
             <div class="col">
               <input class="form-control" type="number" placeholder="min." min="0" id="rangeFilterCountMin">
@@ -105,13 +107,7 @@
         </div>
       </div>
 
-      <div class="row justify-content-front">
-      </div>
-
-      <div class="row">
-        <div class="list-group shadow" id="cat-list-container">
-        </div>
-      </div>
+      <div class="row" id="cat-list-container"></div>
     </div>
   </main>
   
